[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aioqueues"
authors = [{name = "Erik Kalkoken", email = "kalkoken87@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "aiosqlite"
]

[tool.flit.module]
name = "aioqueues"
