[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiodiskqueue"
authors = [{name = "Erik Kalkoken", email = "kalkoken87@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "aiosqlite"
]

[tool.flit.module]
name = "aiodiskqueue"
