[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiodiskqueue"
authors = [{name = "Erik Kalkoken", email = "kalkoken87@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "aiodbm>=0.4.0",

]

[project.optional-dependencies]
aiofiles = [
    "aiofiles>=23.1.0",
]
aiosqlite = [
    "aiosqlite>=0.19.0"
]

[project.urls]
Documentation = "https://aiodiskqueue.readthedocs.io/en/latest/"
Source = "https://github.com/ErikKalkoken/aiodiskqueue"
Tracker = "https://github.com/ErikKalkoken/aiodiskqueue/issues"

[tool.flit.module]
name = "aiodiskqueue"

[tool.isort]
profile = "black"
